# indents

./: .travis.yml  CHANGELOG.md  LICENSE  README.md  indents.cabal  stack.yaml
.circleci/: config.yml
Text/Parsec/: Indent.hs
src/Text/Parsec/: Indent.hs
src/Text/Parsec/Indent/: Explicit.hs  Internal.hs
tests/: Main.hs
tests/Text/Parsec/Indent/: Tests.hs
