Name:                indents
Version:             0.3.3
Synopsis:            indentation sensitive parser-combinators for parsec
Description:         This library provides functions for use in parsing indentation sensitive contexts. It parses blocks of lines all indented to the same level as well as lines continued at an indented level below.
Homepage:            http://github.com/jaspervdj/indents
License:             BSD3
License-file:        LICENSE
Author:              Sam Anklesaria, Jasper Van der Jeugt
Maintainer:          jaspervdj@gmail.com
Category:            Text, Parsing
Build-type:          Simple
Cabal-version:       >=1.2

Extra-source-files:
  CHANGELOG.md

Library
  Exposed-modules:
    Text.Parsec.Indent

  Build-depends:
    base          >= 4 && < 5,
    parsec        >= 3 && < 3.2,
    mtl           >= 1 && < 2.3
